<?xml version="1.0"?>
<package format="2">
  <name>gazebo-tutorial</name>
  <version>0.1.0</version>
  <description>The gazebo-tutorial package for the Purdue SMART lab ROS tutorial on Gazebo simulation - autonomous mobile robot navigation and creating custom robots and sensor plugins </description>

  <maintainer email="ramviyas@purdue.edu">Ramviyas Parasuraman</maintainer>

  <license>MIT</license>

  <author email="lee1424@purdue.edu">Sangjun Lee</author>
  <author email="tmina@purdue.edu">Tamzidul Mina</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
